fix(layout): correct bottom overflow

--- a/webapps/client/styles/_layout.less
+++ b/webapps/client/styles/_layout.less
@@ -19,6 +19,7 @@ body {
   min-width: 100%;
   min-height: 100%;
   height: 100%;
+  padding-bottom: 65px;
 }
 
 .page-wrap {
